Fix for white space on home screen top (#67)

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,3 +1,8 @@
+p {
+    margin-top: 0;
+    padding: 0;
+}
+
 #footer-container {
     width: 100%;
     text-align: center;
@@ -15,7 +20,6 @@
 .footer-links:hover {
     color: #3cdd1b; 
 }
-
 
 /* Position and sizing of burger button */
 .bm-burger-button {
